Mon Sep 21 07:44:30 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkobject.c (gtk_object_class_add_signals): reallocate
	the required memory block, rather than allocating it newly from
	scratch and doing a full-blown block copy on it.

Mon Sep 21 02:30:06 1998  Tim Janik  <timj@gtk.org>

        * NEWS file update for upcoming release of Gtk+ version 1.1.2,
        binary age 0, interface age 0.

       	* gtk/gtkmain.c (gtk_init): enforce gtk-modules to always be resident.

Sun Sep 20 18:21:46 1998  Owen Taylor  <otaylor@redhat.com>

	* ltconfig.sh: Patch to libtool-1.2b to make --disable-static
	work.

Sun Sep 20 09:52:39 1998  Owen Taylor  <otaylor@gtk.org>

	* HACKING: indent other than GNU indent should be OK
	  now.

	* gtk/genmarshal.pl gtk/Makefile.am: Call indent on file
	  instead of piping through indent. If indent wasn't
	  found in ./configure don't bother indenting at 
	  all.

Fri Sep 18 19:11:10 1998  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdk.h: Add names to prototype for gdk_image_new_bitmap.

Fri Sep 18 18:54:59 1998  Jay Cox  (jaycox@earthlink.net)

	* gtk/Makefile.am: use $(AWK) instead of awk

1998-09-18  Raja R Harinath  <harinath@cs.umn.edu>

	* gtk/Makefile.am (gdk_headers): 
	Remove references to $(top_srcdir). 
	(gtk.defs, gtktypebuiltins{.h,_vars.c,_ids.c,_evals.c}): Simplify.
	* gtk/makeenums.pl (parse_entries): Don't look for $srcdir.

Fri Sep 18 19:58:24 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkobject.h (struct _GtkObject): changed gpointer object_data; to
	GData*object_data to cure compiler warnings.

Thu Sep 17 19:06:47 PDT 1998 Manish Singh <yosh@gimp.org>

	* install-sh
	* missing
	* mkinstalldirs: updated to latest automake version

1998-09-17  Raja R Harinath  <harinath@cs.umn.edu>

	* gtk/Makefile.am (source_headers): Move `gtkfeature.h' ...
	(gtkinclude_HEADERS): ... here.
	(gtk.defs): Pass `g' flag to sed, to replace all occurances.

Thu Sep 17 10:49:51 1998  Raph Levien  <raph@gimp.org>
